--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,3 +4,6 @@ services:
         image: klakegg/hugo:0.93.2-alpine
         volumes:
             - C:\Users\ghign\projects\ghign0\ghign0.eth\site:/src
+        ports:
+            - "1313:1313"
+        command: server
